# sync-bear-notes

./: .gitignore  README.md  pyproject.toml  sync.py
bear_sync/: main.py  sync.py
bear_sync.egg-info/: PKG-INFO
