[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project]
name = "bear-sync"
version = "0.1.0"
dependencies = [
    "click>=8.1.8",
    'importlib-metadata; python_version>="3.12"',
]
description="Sync notes from Bear to a local directory"
readme="README.md"

[project.scripts]
bear-sync = "bear_sync.main:main"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

